--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@ if(navigator.browserLanguage) {
 	</head>
 	<body>
 
-		<div class="bg"><img src="bg.jpg"></div>
+		<div class="bg"><img src="bg.png"></div>
 		<div class="main">
 			<div class="content">
+				<img class="pp" src="pp.png"></img>
 				<div class="name">Vinicius Emidio Bosi</div>
 				<script>
 					if(lang.substring(0,2)=="pt") {
 						document.write('<div class="about">apenas um jovem tentando fazer coisas</div>')
 					} else (
-						document.write('<div class="about">just a young man trying to do things</div>')
+						document.write('<div class="about">just a young trying to do things</div>')
 					)
 				</script>
 				<ul class="link">
