--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ if(navigator.browserLanguage) {
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Vinicius Emidio Bosi</title>
+		<title>vinicius emidio bosi</title>
 		<meta charset="UTF-8">
 		<meta name="author" content="Vinicius Emidio Bosi" />
 		<meta name="description" content="apenas um jovem tentando fazer coisas">
