--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ if(navigator.browserLanguage) {
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>vinicius emidio bosi</title>
+		<title>Vinicius Emidio Bosi</title>
 		<meta charset="UTF-8">
 		<meta name="author" content="Vinicius Emidio Bosi" />
 		<meta name="description" content="apenas um jovem tentando fazer coisas">
@@ -40,10 +40,10 @@ if(navigator.browserLanguage) {
 						document.write('<div class="about">just a young trying to do things</div>')
 					)
 				</script>
+				<div class="about-mail"><a href="mailto:vinicius@viniciuseb.com">vinicius@viniciuseb.com</a></div>	
 				<ul class="link">
 					<li><a href="https://github.com/viniciuseb" title="github"><i class="fab fa-github"></i></a></li>
 					<li><a href="https://instagram.com/viniciuseb_" title="instagram"><i class="fab fa-instagram"></i></a></li>
-					<li><a href="mailto:vinicius@viniciuseb.com" title="email"><i class="fa fa-envelope"></i></a></li>
 				</ul>
 			</div>
 		</div>
